[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/game/enemies/17/17.gd" type="Script" id=1]
[ext_resource path="res://textures/scp-017.png" type="Texture" id=2]
[ext_resource path="res://src/game/hud/debug_showhide.gd" type="Script" id=3]
[ext_resource path="res://src/game/enemies/raycast.gd" type="Script" id=4]
[ext_resource path="res://src/game/enemies/attack.gd" type="Script" id=5]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 1
emission_sphere_radius = 6.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 1.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.6
color = Color( 0.0431373, 0.0431373, 0.0431373, 0.470588 )

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[sub_resource type="CircleShape2D" id=3]
radius = 250.0

[sub_resource type="CircleShape2D" id=4]
radius = 6.0

[node name="SCP-017" type="KinematicBody2D" groups=[
"lethal",
]]
script = ExtResource( 1 )

[node name="WhiteToActuallySee" type="ColorRect" parent="."]
visible = false
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0

[node name="Compound" type="Particles2D" parent="."]
amount = 32
lifetime = 2.0
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DebugPathfinding" type="Line2D" parent="."]
width = 2.0
default_color = Color( 1, 0.984314, 0, 1 )
script = ExtResource( 3 )

[node name="RayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
script = ExtResource( 4 )

[node name="TargetArea" type="Area2D" parent="."]
editor/display_folded = true
input_pickable = false
monitorable = false

[node name="CollisionShape" type="CollisionShape2D" parent="TargetArea"]
shape = SubResource( 3 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="DeathBox" type="Area2D" parent="."]
input_pickable = false
monitorable = false
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
shape = SubResource( 4 )
[connection signal="body_entered" from="TargetArea" to="RayCast" method="_on_TargetArea_body_entered"]
[connection signal="body_exited" from="TargetArea" to="RayCast" method="_on_TargetArea_body_exited"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="body_entered" from="DeathBox" to="DeathBox" method="_on_DeathBox_body_entered"]
